--- a/src/main/java/br/univates/apresentacao/TelaCadastroClientes.form
+++ b/src/main/java/br/univates/apresentacao/TelaCadastroClientes.form
@@ -138,7 +138,7 @@
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="jFormattedTextFieldTelefone" pref="191" max="32767" attributes="0"/>
                               <Component id="jFormattedTextFieldCelular" alignment="0" pref="191" max="32767" attributes="0"/>
-                              <Component id="jFormattedTextFieldCpf" max="32767" attributes="0"/>
+                              <Component id="jMyCpfField" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -185,7 +185,7 @@
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="jFormattedTextFieldCpf" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jMyCpfField" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -321,7 +321,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonExcluirActionPerformed"/>
           </Events>
         </Component>
-        <Component class="br.univates.system32.components.JMyCpfField" name="jFormattedTextFieldCpf">
+        <Component class="br.univates.system32.components.JMyCpfField" name="jMyCpfField">
         </Component>
       </SubComponents>
     </Container>
